# DoodleVox

./: .gitignore  .gitmodules  PRIVACY-POLICY.md  README.md
.github/workflows/: release_mobile.yml  release_vst.yml
doodlevox_mobile/: CHANGELOG.md  DESIGN.md  README.md  analysis_options.yaml  flutter_launcher_icons.yaml  flutter_native_splash.yaml  pubspec.yaml
doodlevox_mobile/android/app/: build.gradle.kts
doodlevox_mobile/android/app/src/main/: AndroidManifest.xml
doodlevox_mobile/android/app/src/main/kotlin/com/createdbycapslock/doodlevox_mobile/: MainActivity.kt
doodlevox_mobile/ios/Runner/: Info.plist
doodlevox_mobile/ios/Runner.xcodeproj/: project.pbxproj
doodlevox_mobile/lib/: main.dart
doodlevox_mobile/lib/models/: dv_recording.dart
doodlevox_mobile/lib/providers/: dv_audio_provider.dart  dv_daw_provider.dart  dv_library_provider.dart  dv_prefs_provider.dart  dv_sync_provider.dart
doodlevox_mobile/lib/screens/: library_screen.dart  qr_scan_screen.dart  record_screen.dart
doodlevox_mobile/lib/screens/record/: effects_bottom_sheet_screen.dart  record_screen.dart
doodlevox_mobile/lib/screens/settings/: settings_screen.dart
doodlevox_mobile/lib/screens/shared/: dv_main_shell.dart
doodlevox_mobile/lib/styles/: dv_appbar_style.dart  dv_bottom_nav_style.dart  dv_button_style.dart  dv_colors.dart  dv_effects_sheet_style.dart  dv_library_screen_style.dart  dv_qr_scan_style.dart  dv_record_screen_style.dart  dv_settings_screen_style.dart  dv_snackbar_style.dart  dv_text_theme.dart  dv_themes.dart
doodlevox_mobile/lib/utils/: dv_app_info.dart  dv_router.dart  dv_shared_prefs.dart
doodlevox_mobile/lib/utils/painters/: border_beam_painter.dart
doodlevox_mobile/lib/utils/routing/: dv_cupertino_sheet_page.dart  dv_router.dart
doodlevox_mobile/lib/widgets/: dv_logo.dart  dv_waveform.dart
doodlevox_mobile/lib/widgets/shared/: dv_alert_dialog.dart  dv_buttons.dart  dv_main_shell.dart  dv_primary_button.dart  dv_primary_icon_button.dart  dv_secondary_button.dart  dv_secondary_icon_button.dart  dv_snackbar.dart
doodlevox_mobile/test/: widget_test.dart
doodlevox_vst/: CHANGELOG.md  CMakeLists.txt  README.md  package.sh  placeholder.txt  xcode_setup.sh
doodlevox_vst/assets/: placeholder.txt
doodlevox_vst/source/: ConnectPage.cpp  ConnectPage.h  DragClipComponent.cpp  DragClipComponent.hpp  LibraryPage.cpp  LibraryPage.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  QRCodeComponent.cpp  QRCodeComponent.h  ReceiverPage.cpp  ReceiverPage.h  SessionPage.cpp  SessionPage.h  Theme.h
